Tue Aug 13 08:27:18 2002  George Lebl <jirka@5z.com>

	* config/gdm.conf.in: update comment on top to be correct
          (USR1 vs. HUP) redhat bug 71308

Thu Aug 08 09:36:11 2002  George Lebl <jirka@5z.com>

	* Release 2.4.0.7

Thu Aug 08 09:33:50 2002  George Lebl <jirka@5z.com>

	* config/gettextfoo.h, config/XKeepsCrashing:  Fix the message bits.

Wed Aug 07 21:01:41 2002  George Lebl <jirka@5z.com>

	* daemon/gdm.h, config/gdm.conf.in, gui/gdmlogin.c: Add a new key
	  RunBackgroundProgramAlways.  It is now normally false, and if
	  it is false, background program is run ONLY if the BackgroundType
	  is set to 0 (None), setting it to true will revert to previous
	  behaviour.  This is to work around the crackladden xsri hack that
	  redhat does and still have nice gui way to config backgrounds.

Wed Aug 07 20:23:28 2002  George Lebl <jirka@5z.com>

	* gui/greeter/themes/circles/circles.xml.in,
	  gui/greeter/themes/happygnome/happygnome.xml.in:
	  Use _Language instead of Option for the language_button

Wed Aug 07 20:20:17 2002  George Lebl <jirka@5z.com>

	* gui/greeter/*.c: include file fixups

	* gui/greeter/greeter_events.[ch], gui/greeter/greeter.[ch],
	  gui/greeter/greeter_canvas_item.c, gui/greeter/greeter_item.c:
	  Add an incredible hack for doing mnemonics on the graphical
	  greeter with offscreen buttons and such stuff.

	* gui/greeter/greeter_system.c: fix window close should do cancel
	  not ok.

	* gui/gdmlogin.c, gui/greeter/greeter_item_pam.c: ignore also
	  left_tab (shift+tab), and the KP versions of up/down/tab,
	  so that we don't lose focus

	* gui/greeter/themes/circles/circles.xml.in,
	  gui/greeter/themes/happygnome/happygnome.xml.in: use the
	  mnemonic versions of the button labels so that we get some
	  keynav.

	* gui/greeter/greeter_parser.c: when we can't get any translations,
	  try our own gettext database to find the text.

Wed Aug 07 18:38:11 2002  George Lebl <jirka@5z.com>
