@@ -97,9 +97,9 @@ DefaultLocale=en_US
 # These are things excluded from the face browser, not from logging in
 Exclude=bin,daemon,adm,lp,sync,shutdown,halt,mail,news,uucp,operator,nobody,gdm,postgres,pvm,rpm
 GlobalFaceDir=@EXPANDED_DATADIR@/faces/
-Icon=@EXPANDED_PIXMAPDIR@/gdm.xpm
+Icon=@EXPANDED_PIXMAPDIR@/gdm.png
 LocaleFile=@EXPANDED_LOCALEDIR@/locale.alias
-Logo=@EXPANDED_PIXMAPDIR@/gnome-logo-large.png
+Logo=@EXPANDED_PIXMAPDIR@/gdm-foot-logo.png
 Quiver=true
 SystemMenu=true
 # Note to distributors, if you wish to have a different Welcome string
