@@ -6,7 +6,7 @@ _Comment=Log in as another user inside a nested window
 # this is minorly evil
 TryExec=Xnest
 Exec=gdmflexiserver --xnest
-Icon=
+Icon=gdm.png
 Terminal=0
 Type=Application
 Categories=Application;System;
