@@ -3,7 +3,7 @@ Encoding=UTF-8
 _Name=New login
 _Comment=Log in as another user without loging out
 Exec=gdmflexiserver
-Icon=
+Icon=gdm.png
 Terminal=0
 Type=Application
 Categories=Application;System;
