@@ -4,7 +4,7 @@ _Name=GDM Configurator
 _Comment=A graphical application for configuring the GNOME Display Manager (GDM)
 TryExec=gdmsetup
 Exec=gdmsetup
-Icon=gdm.xpm
+Icon=gdm.png
 Terminal=0
 Type=Application
 Categories=Application;System;
