@@ -1,3 +1,11 @@
+Tue Aug 13 11:52:28 2002  George Lebl <jirka@5z.com>
+
+	* pixmaps/Makefile.am, pixmaps/gdm.png, pixmaps/gdm-foot-logo.png:
+	  Create new icon myself.  New large logo thing with the new foot
+
+	* config/gdm.conf.in, daemon/gdm.h, gui/*.desktop.in: use the new
+	  logo and icon everywhere
+
 Tue Aug 13 08:27:18 2002  George Lebl <jirka@5z.com>
 
 	* config/gdm.conf.in: update comment on top to be correct
